version/0.17/_sources/api/solver/_autosummary/settings/exhaust_fan.rst.txt
:orphan:

.. _exhaust_fan:

exhaust_fan
===========

.. autoclass:: ansys.fluent.core.solver.settings_232.exhaust_fan.exhaust_fan
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`exhaust_fan_child <exhaust_fan_child>`


.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`boundary_conditions <boundary_conditions>`       'boundary_conditions' child.

================================================   ================================

