version/0.19/_sources/api/solver/_autosummary/settings/exhaust_fan.rst.txt
:orphan:

.. _exhaust_fan:

exhaust_fan
===========

.. autoclass:: ansys.fluent.core.solver.settings_241.exhaust_fan.exhaust_fan
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`exhaust_fan_child <exhaust_fan_child>`


.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`boundary_conditions <boundary_conditions>`       'boundary_conditions' child.

================================================   ================================

